Fix services card heights stretch for Safari

--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-evenly;
   }
 
